Replace TokenizedSender with MessengerSender